# docs/api/swagger.json
@@ -38,12 +38,6 @@
                             "$ref": "#/definitions/Success-SignInResponse"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/Failure-ErrorDetail"
-                        }
-                    },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
@@ -199,6 +193,9 @@
             "properties": {
                 "token": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/dto.UserDetail"
                 }
             }
         },
